--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,13 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
-</ion-content>
+  <ion-card *ngFor="let product of products">
+  <img src="../../assets/icon/favicon.ico">
+    <ion-card-content>
+      <ion-card-title >
+        {{product.name}}
+      </ion-card-title>
+        <p>Price: </p> {{product.price}}
+    </ion-card-content>
+  </ion-card>
+</ion-content>  
