--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -8,20 +8,12 @@
 </ion-header>
 
 <ion-content>
-
-  <!--<ion-item>
-    <ion-input type="text" placeholder="Search a product.." (input)="searchProductService($event, searchKey)"></ion-input>
-  </ion-item>
   <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon [name]="item.icon" item-left></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-right>
-        {{item.note}}
-      </div>
+    <button ion-item *ngFor="let product of products"> 
+      {{product.name}}
     </button>
   </ion-list>
   <div *ngIf="selectedItem" padding>
     You navigated here from <b>{{selectedItem.title}}</b>
-  </div>-->
+  </div>
 </ion-content>
