--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -10,6 +10,38 @@
 </ion-header>
 
 
-<ion-content padding>
-<h2>Login Page</h2>
+<ion-content class="login-content" padding>
+	<ion-row class="logo-row">
+		<ion-col></ion-col>
+		<ion-col width-67>
+			<img src="http://placehold.it/300x200"/>
+		</ion-col>
+		<ion-col></ion-col>
+	</ion-row>
+	<div class="login-box">
+		<form (ngSubmit)="login()" #registerForm="ngForm">
+			<ion-row>
+				<ion-col>
+					<ion-list inset>
+
+						<ion-item>
+							<<ion-input type="text" placeholder="Email" name="email" [(ngModel)]="email" required></ion-input>
+						</ion-item>
+
+						<ion-item>
+							<ion-input type="password" placeholder="Password" name="password" [(ngModel)]="password" required></ion-input>
+						</ion-item>
+
+					</ion-list>
+				</ion-col>
+			</ion-row>
+
+			<ion-row>
+				<ion-col class="signup-col">
+					<button class="submit-btn" full type="submit" [disabled]="!registerForm.form.valid">Login</button>
+					<button class="register-btn" block clear (click)="createAccount()">Create New Account</button>
+				</ion-col>
+			</ion-row>
+		</form>
+	</div>
 </ion-content>
